# Chitose

./: .gitignore  .pre-commit-config.yaml  README.md  k8-deployment.yaml  pyproject.toml
.github/workflows/: docker-build.yml
chitose/: main.py  manage.py
chitose/api/: __init__.py  router.py
chitose/api/models/: __init__.py  ipc.py  response.py  user.py
chitose/api/routes/: ipc.py  users.py
chitose/api/tasks/: __init__.py  ipc_tasks.py
chitose/chitose/: asgi.py  settings.py  urls.py  wsgi.py
chitose/config/: settings.py
chitose/config/models/: schema.prisma
docker/: Dockerfile  start.sh
