[tool.poetry]
name = "chitose"
version = "0.1.0"
description = "The backend API for Akari"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
python-dotenv = "^1.0.0"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
better-ipc = "^2.0.3"
orjson = "^3.8.14"
discord-py = "^2.2.3"
pydantic = "^1.10.8"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
